--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
 
-api.security.token = ${DB_SECURITY_TOKEN:123456789}
+api.security.token = ${DB_SECURITY_TOKEN}
